make slideShow containing div flex to stop slide image flowing out of container comment out follow us section near footer update slide delay == 5000

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,17 +93,13 @@ div#projectList ul span.projects{
 } 
 
 div#imageSlider{
-    width: 350px;
-    height:175px;
-    margin: auto;
     display: none;
-    position:relative;
 } 
 
 div#imageSlider img#image{
-    max-width: 100%;
-    max-height: 300px;
-    margin-bottom: 20px;
+    width: 250px;
+    height: 220px;
+    margin: auto;
     border: solid #f1f1f1 20px;
 }
 
